tests/baselines/reference/topLevelAwaitErrors.10(module=es2022).errors.txt
index.ts(2,19): error TS1359: Identifier expected. 'await' is a reserved word that cannot be used here.


==== index.ts (1 errors) ====
    // await disallowed in alias of named import
    import { await as await } from "./other";
                      ~~~~~
!!! error TS1359: Identifier expected. 'await' is a reserved word that cannot be used here.
    
==== other.ts (0 errors) ====
    declare const _await: any;
    export { _await as await };
    